# bertocoin

./: .flake8  .gitignore  Dockerfile  README.en.md  README.md  pyproject.toml
.github/workflows/: pr-verify.yaml
bertocoin/: __main__.py
codigo_y_plantilla/: bertocoin.py
imagenes/: contenido.md
images/: contenido.md
modelo3d/: modelo3dMonedaBitcoin.stl
test/: test_bitcoin.py
