[tool.poetry]
name = "bertocoin"
version = "0.1.0"
description = ""
authors = ["alberto <alberto.femenias@udc.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ecdsa = "^0.18.0"
pypng = "^0.20220715.0"
PyQRCode = "^1.2.1"
ripemd-hash = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# lint code with "poetry run flake8"
# test code with "poetry run python3 -m unittest -b"
# run code with "poetry run python bertocoin --help"